--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,105 +1,44 @@
 version: "3"
 services: 
     user-service:
-        build: "./user-service"
-        depends_on:
-            - user-service-mongo-db
-            - user-service-mongo-express
+        build: "./User-Service"
+        depends_on: 
+            - user-service-mongo
         volumes:
-            - ./user-service:/opt/app
-    user-service-mongo-db:
+            - ./User-Service:/opt/app
+    user-service-mongo:
         image: mongo
-        restart: always
-        environment: 
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
-    user-service-mongo-express:
-        image: mongo-express
-        restart: always
-        ports:
-            [8081:8081]
+        ports: 
+            - 27017:27017
         environment:
-            ME_CONFIG_BASICAUTH_USERNAME: ''
-            ME_CONFIG_BASICAUTH_PASSWORD: ''
-            ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
-            ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
-            ME_CONFIG_MONGODB_ADMINPASSWORD: 'toor'
-            ME_CONFIG_MONGODB_PORT: 27017
-            ME_CONFIG_MONGODB_SERVER: 'mongo'
-            ME_CONFIG_OPTIONS_EDITORTHEME: 'default'
-            ME_CONFIG_REQUEST_SIZE: '100kb'
-            ME_CONFIG_SITE_BASEURL: '/'
-            ME_CONFIG_SITE_COOKIESECRET: 'cookiesecret'
-            ME_CONFIG_SITE_SESSIONSECRECT: 'sessionsecret'
-            ME_CONFIG_SITE_SSL_ENABLED: 'false'
-            ME_CONFIG_SITE_SSL_CRT_PATH: ''
-            ME_CONFIG_SITE_SSL_KEY_PATH: ''
+            MONGO_INITDB_DATABASE: users
+            MONGO_INITDB_USER_NAME: root
+            MONGO_INITDB_PASSWORD: toor
     task-service:
-        build: "./task-service"
+        build: "./Task-Service"
         depends_on: 
-            - task-service-mongo-db
-            - task-service-mongo-express
+            - task-service-mongo
         volumes:
-            - ./task-service:/opt/app
-    task-service-mongo-db:
+            - ./Task-Service:/opt/app
+    task-service-mongo:
         image: mongo
-        restart: always
-        environment: 
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
-    task-service-mongo-express:
-        image: mongo-express
-        restart: always
-        ports:
-            [8082:8082]
+        ports: 
+            - 27018:27017
         environment:
-            ME_CONFIG_BASICAUTH_USERNAME: ''
-            ME_CONFIG_BASICAUTH_PASSWORD: ''
-            ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
-            ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
-            ME_CONFIG_MONGODB_ADMINPASSWORD: 'toor'
-            ME_CONFIG_MONGODB_PORT: 27017
-            ME_CONFIG_MONGODB_SERVER: 'mongo'
-            ME_CONFIG_OPTIONS_EDITORTHEME: 'default'
-            ME_CONFIG_REQUEST_SIZE: '100kb'
-            ME_CONFIG_SITE_BASEURL: '/'
-            ME_CONFIG_SITE_COOKIESECRET: 'cookiesecret'
-            ME_CONFIG_SITE_SESSIONSECRECT: 'sessionsecret'
-            ME_CONFIG_SITE_SSL_ENABLED: 'false'
-            ME_CONFIG_SITE_SSL_CRT_PATH: ''
-            ME_CONFIG_SITE_SSL_KEY_PATH: ''
+            MONGO_INITDB_DATABASE: tasks
+            MONGO_INITDB_USER_NAME: root
+            MONGO_INITDB_PASSWORD: toor
     tasklist-service:
-        build: "./tasklist-service"
+        build: "./TaskList-Service"
         depends_on: 
-            - tasklist-service-mongo-db
-            - tasklist-service-mongo-express
+            - tasklist-service-mongo
         volumes:
-            - ./taslkist-service:/opt/app
-    tasklist-service-mongo-db:
+            - ./TaskList-Service:/opt/app
+    tasklist-service-mongo:
         image: mongo
-        restart: always
-        environment: 
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
-    tasklist-service-mongo-express:
-        image: mongo-express
-        restart: always
-        ports:
-            [8083:8083]
+        ports: 
+            - 27019:27017
         environment:
-            ME_CONFIG_BASICAUTH_USERNAME: ''
-            ME_CONFIG_BASICAUTH_PASSWORD: ''
-            ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
-            ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
-            ME_CONFIG_MONGODB_ADMINPASSWORD: 'toor'
-            ME_CONFIG_MONGODB_PORT: 27017
-            ME_CONFIG_MONGODB_SERVER: 'mongo'
-            ME_CONFIG_OPTIONS_EDITORTHEME: 'default'
-            ME_CONFIG_REQUEST_SIZE: '100kb'
-            ME_CONFIG_SITE_BASEURL: '/'
-            ME_CONFIG_SITE_COOKIESECRET: 'cookiesecret'
-            ME_CONFIG_SITE_SESSIONSECRECT: 'sessionsecret'
-            ME_CONFIG_SITE_SSL_ENABLED: 'false'
-            ME_CONFIG_SITE_SSL_CRT_PATH: ''
-            ME_CONFIG_SITE_SSL_KEY_PATH: ''
-            
+            MONGO_INITDB_DATABASE: tasklists
+            MONGO_INITDB_USER_NAME: root
+            MONGO_INITDB_PASSWORD: toor
